# ohmulator

./: .BULK_RENAME.txt  .gitignore  CMakeLists.txt  README.md  tree
doc/: conduct.html  index.html
doc/Components/: ACPowerSource.html  AlkalineBattery.html  Battery.html  Capacitor.html  Diode.html  Inductor.html  LED.html  LemonBattery.html  LithiumBattery.html  MagneticField.html  NiCadBattery.html  PSU_ACDC.html  PickupCoil.html  PotatoBattery.html  Potentiometer.html  Rectifier.html  Resistor.html  Switch.html  Transistor.html  VibratingString.html  Wire.html
doc/code/core/: ComponentFactory.html
doc/css/: style.css
doc/tutorial/: index.html
doc/tutorial/Adding Components/: index.html
doc/tutorial/Building a PSU/: index.html
include/components/: ACPowerSource.h  AlkalineBattery.h  Capacitor.h  Diode.h  Inductor.h  LemonBattery.h  PSU_ACDC.h  Potentiometer.h  Rectifier.h  Resistor.h  Switch.h  Transistor.h  Wire.h
include/components/buttons/: NC_LatchingButton.h  NC_MomentaryButton.h  NO_LatchingButton.h  NO_MomentaryButton.h
include/components/common/: Capacitor.h  Diode.h  Inductor.h  LED.h  Potentiometer.h  Rectifier.h  Resistor.h  Switch.h  Transistor.h
include/components/connectors/: Pin.h  Trace.h
include/components/ic/: IC.h
include/core/: Circuit.h  Component.h  ComponentFactory.h
include/utils/: MathUtils.h
src/: main.cpp
src/components/: ACPowerSource.cpp  AlkalineBattery.cpp  Battery.cpp  Capacitor.cpp  Diode.cpp  Inductor.cpp  LED.cpp  LemonBattery.cpp  LithiumBattery.cpp  MagneticField.cpp  NiCadBattery.cpp  PSU_ACDC.cpp  PickupCoil.cpp  PotatoBattery.cpp  Potentiometer.cpp  Rectifier.cpp  Resistor.cpp  Switch.cpp  Transistor.cpp  VibratingString.cpp  Wire.cpp
src/core/: Component.cpp  ComponentFactory.cpp
tests/: CMakeLists.txt  CircuitSimulatorTests.cpp  ComponentTests.cpp
(+58 files in other folders)
